--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/pwa": "^0.13.8",
     "@angular/router": "^6.0.3",
+    "@angular/service-worker": "^7.2.13",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "rxjs": "6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
